# wssserver

./: .env  .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  run.sh
.cargo/: config.toml
db/: Cargo.toml
db/migrations/00000000000000_diesel_initial_setup/: up.sql
db/migrations/2021-12-04-154101_create_questions/: down.sql  up.sql
db/migrations/2021-12-05-081317_create_questions/: up.sql
db/src/: lib.rs
db/src/models/: mod.rs  question.rs
errors/: Cargo.toml
errors/src/: lib.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  tests.rs
server/src/routes/: mod.rs
server/src/routes/questions/: create.rs  get_all.rs  mod.rs
server/src/websocket/: mod.rs  server.rs
src/: lib.rs  main.rs
src/server/: lobby.rs  mod.rs
src/utils/: cts.rs  mod.rs
