[package]
name = "wssserver"
version = "0.1.0"
authors = ["lamhai1401 <lamthanhhai141@gmail.com>"]
edition = "2018"
default-run = "wssserver"
readme = "README.md"
homepage = "https://github.com/lamhai1401/wssserver"
repository = "https://github.com/lamhai1401/wssserver"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.1"
actix-web = "3.3.2"
actix-web-actors = "3.0.0"
uuid = { version = "0.8.2", features = ["v4", "serde"] } # uuid's fit well in this context.


[lib]
name = "wssserver"
# path = "src/"

[[bin]]
name = "wssserver"
path = "src/bin/main.rs"
