[[bin]]
name = "wssserver"
path = "src/bin/main.rs"

[dependencies]
log = "0.4.0"

[lib]
name = "wssserver"

[package]
name = "wssserver"
version = "0.1.0"
authors = ["lamhai1401 <lamthanhhai141@gmail.com>"]
edition = "2018"
default-run = "wssserver"
readme = "README.md"
homepage = "https://github.com/lamhai1401/wssserver"
repository = "https://github.com/lamhai1401/wssserver"

[workspace]
members = ["db","server"]
