[dependencies]
errors = { path = "../errors" }
chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
env_logger = "0.5.13"
log = "0.4.0"
radix = "0.4.1"
rand = "0.6.1"
r2d2 = "0.8.2"
r2d2_postgres = "0.18.1"
serde = "1.0.80"
serde_derive = "1.0.115"
serde_json = "1.0.13"

[package]
name = "db"
version = "0.1.0"
edition = "2018"
